--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,9 @@ executors:
   php7_1:
     docker:
       - image: circleci/php:7.1
+
+orbs:
+  codecov: codecov/codecov@1.0.4
       
 commands:
   composer_install:
@@ -24,7 +27,9 @@ commands:
           key: composer-v1-{{ checksum "composer.json" }}
           paths:
             - vendor
-      - run: vendor/bin/phpunit
+      - run: vendor/bin/phpunit --coverage-clover=coverage.xml
+      - codecov/upload:
+          file: ./coverage.xml
 
 jobs:
   php73: 
