--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "illuminate/translation": "~5.8"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^7.5",
+        "orchestra/testbench": "^3.5"
     },
     "autoload": {
         "psr-4": {
