--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -15,6 +15,7 @@
     <testsuites>
         <testsuite name="Test Suite">
             <directory suffix=".php">./tests</directory>
+            <exclude>./tests/TestCase.php</exclude>
         </testsuite>
     </testsuites>
     <filter>
