--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,9 @@
 version: 2.1
 
 executors:
+  php7_4:
+    docker:
+      - image: circleci/php:7.4
   php7_3:
     docker:
       - image: circleci/php:7.3
@@ -13,7 +16,7 @@ executors:
 
 orbs:
   codecov: codecov/codecov@1.0.4
-      
+
 commands:
   composer_install:
     steps:
@@ -32,15 +35,19 @@ commands:
           file: ./coverage.xml
 
 jobs:
-  php73: 
+  php74:
+    executor: php7_4
+    steps:
+      - composer_install
+  php73:
     executor: php7_3
     steps:
       - composer_install
-  php72: 
+  php72:
     executor: php7_2
     steps:
       - composer_install
-  php71: 
+  php71:
     executor: php7_1
     steps:
       - composer_install
@@ -48,6 +55,7 @@ jobs:
 workflows:
   test:
     jobs:
+      - php74
       - php73
       - php72
       - php71
