--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,9 @@
 version: 2.1
 
 executors:
+  php8_0:
+    docker:
+      - image: circleci/php:8.0
   php7_4:
     docker:
       - image: circleci/php:7.4
@@ -9,7 +12,7 @@ executors:
       - image: circleci/php:7.3
   php7_2:
     docker:
-      - image: circleci/php:7.2
+      - image: circleci/php:7.2.33
   php7_1:
     docker:
       - image: circleci/php:7.1
@@ -35,6 +38,10 @@ commands:
           file: ./coverage.xml
 
 jobs:
+  php80:
+    executor: php8_0
+    steps:
+      - composer_install
   php74:
     executor: php7_4
     steps:
@@ -55,6 +62,7 @@ jobs:
 workflows:
   test:
     jobs:
+      - php80
       - php74
       - php73
       - php72
