--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,12 @@
     "description": "",
     "require": {
         "php": "^7.1.3|^8.0.0",
-        "illuminate/validation": "~5.8|^6.0|^7.0|^8.0",
-        "illuminate/translation": "~5.8|^6.0|^7.0|^8.0"
+        "illuminate/validation": "~5.8|^6.0|^7.0|^8.0|^9.0",
+        "illuminate/translation": "~5.8|^6.0|^7.0|^8.0|^9.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5|^9.0",
-        "orchestra/testbench": "^3.5|^6.9"
+        "orchestra/testbench": "^3.5|^6.9|^7.5"
     },
     "autoload": {
         "psr-4": {
