--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,9 @@
 {
     "name": "fusic/valii",
     "description": "",
+    "license": [
+        "MIT"
+    ],
     "require": {
         "php": "^7.1.3|^8.0.0",
         "illuminate/validation": "~5.8|^6.0|^7.0|^8.0|^9.0",
