--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,12 @@
     "name": "fusic/valii",
     "description": "",
     "require": {
-        "php": "^7.1.3|^8.0.0",
-        "illuminate/validation": "~5.8|^6.0|^7.0|^8.0",
-        "illuminate/translation": "~5.8|^6.0|^7.0|^8.0"
+        "php": "^7.1.3|^8.0.0|^8.1|^8.2",
+        "illuminate/validation": "~5.8|^6.0|^7.0|^8.0|^9.0|^10.0",
+        "illuminate/translation": "~5.8|^6.0|^7.0|^8.0|^9.0|^10.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5|^9.0",
+        "phpunit/phpunit": "^7.5|^8.0|^9.0|^10.0",
         "orchestra/testbench": "^3.5|^6.9"
     },
     "autoload": {
