--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,13 @@
         "MIT"
     ],
     "require": {
-        "php": "^7.1.3|^8.0.0|^8.1|^8.2",
-        "illuminate/validation": "~5.8|^6.0|^7.0|^8.0|^9.0|^10.0",
-        "illuminate/translation": "~5.8|^6.0|^7.0|^8.0|^9.0|^10.0"
+        "php": "^7.1.3|^8.0.0|^8.1|^8.2|^8.3",
+        "illuminate/validation": "~5.8|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
+        "illuminate/translation": "~5.8|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5|^8.0|^9.0|^10.0",
-        "orchestra/testbench": "^3.5|^6.9|^7.5"
+        "phpunit/phpunit": "^7.5|^8.0|^9.0|^10.0|^11.0",
+        "orchestra/testbench": "^3.5|^6.9|^7.5|^9.0"
     },
     "autoload": {
         "psr-4": {
