--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,35 +3,22 @@ version: 2.1
 executors:
   php8_3:
     docker:
-      - image: circleci/php:8.3
+      - image: cimg/php:8.3
   php8_2:
     docker:
-      - image: circleci/php:8.2
+      - image: cimg/php:8.2
   php8_0:
     docker:
-      - image: circleci/php:8.0
+      - image: cimg/php:8.0
   php7_4:
     docker:
-      - image: circleci/php:7.4
-  php7_3:
-    docker:
-      - image: circleci/php:7.3
-  php7_2:
-    docker:
-      - image: circleci/php:7.2.33
-  php7_1:
-    docker:
-      - image: circleci/php:7.1
-
-orbs:
-  codecov: codecov/codecov@1.0.4
+      - image: cimg/php:7.4
 
 commands:
   composer_install:
     steps:
       - checkout
       - run: php -v
-      - run: echo 'memory_limit = -1' | sudo tee -a /usr/local/etc/php/conf.d/docker-php-memlimit.ini
       - run: sudo composer self-update
       - restore_cache:
           keys:
@@ -41,9 +28,7 @@ commands:
           key: composer-v1-{{ checksum "composer.json" }}
           paths:
             - vendor
-      - run: vendor/bin/phpunit --coverage-clover=coverage.xml
-      - codecov/upload:
-          file: ./coverage.xml
+      - run: vendor/bin/phpunit
 
 jobs:
   php83:
@@ -62,18 +47,6 @@ jobs:
     executor: php7_4
     steps:
       - composer_install
-  php73:
-    executor: php7_3
-    steps:
-      - composer_install
-  php72:
-    executor: php7_2
-    steps:
-      - composer_install
-  php71:
-    executor: php7_1
-    steps:
-      - composer_install
 
 workflows:
   test:
@@ -82,6 +55,3 @@ workflows:
       - php82
       - php80
       - php74
-      - php73
-      - php72
-      - php71
